Work on task command added
